--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,6 +18,17 @@ header {
     vertical-align:top;
 }
 
+.flex-nav {
+  width: 97%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.flex-nav li {
+  list-style-type: none;
+}
+
 .nav-text { 
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -83,11 +94,11 @@ header {
 }
 
 .flex-item-left {
-  flex: 50%;
+  flex: 49%;
 }
 
 .flex-item-right {
-  flex: 50%;
+  flex: 49%;
   position: relative;
 }
 
