--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,9 +1,4 @@
-header {      
-    text-align: center; 
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-}
+
 
 .nav-list { padding: 0;        
     width: 100%;
@@ -23,6 +18,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  padding: 0;
 }
 
 .flex-nav li {
@@ -42,16 +38,9 @@ header {
 .centered-div {
     margin: auto;
     text-align: center;
-    width: 97%;
+    width: 90%;
     border: 3px solid green;
-    padding: 1%;
-}
-
-.centered-div-no-align {
-  margin: auto;
-  width: 97%;
-  border: 3px solid green;
-  padding: 1%;
+    /* padding: 1%; */
 }
 
 .centered-div video {
@@ -81,7 +70,7 @@ header {
 
 .flex-container {
   display: flex;
-  width: 100%;
+  width: 90%;
   flex-wrap: wrap;
 }
 
@@ -91,6 +80,10 @@ header {
 
 .flex-center {
   justify-content: center;
+}
+
+.vertical-flex {
+  flex-direction: column;
 }
 
 .flex-item-left {
@@ -109,7 +102,6 @@ header {
 }
 
 .flex-item-right img {
-  display: inline-block;
   position: absolute;
   bottom: 0;
   left: 0;
