--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,33 +1,39 @@
-
-
-.nav-list { padding: 0;        
-    width: 100%;
-    margin: 0 auto;
+.rounded-button {
+	background-color:#118cdf;
+	border-radius:28px;
+	border:1px solid #0482bd;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:0px 10px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 }
 
-.nav-list li { 
-    display: inline-block;         
-    width: 20%;
-    font-size: 22px;         
-    text-align: center;
-    vertical-align:top;
+.rounded-button:hover {
+	background-color:#163eec;
+}
+
+.rounded-button:active {
+	position:relative;
+	top:1px;
+}
+
+.nav-text-products {
+  font-size: x-large;
 }
 
 .flex-nav {
   width: 97%;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-evenly;
   padding: 0;
+  align-items: center;
 }
 
-.flex-nav li {
-  list-style-type: none;
-}
-
-.nav-text { 
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 .video-container {
     display: inline-block;
@@ -95,7 +101,7 @@
   position: relative;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .flex-item-right, .flex-item-left {
     flex: 100%;
   }
@@ -119,10 +125,14 @@
 }
 
 .scroll {
-  background-color: #fed9ff;
+  /* background-color: #fed9ff; */
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-radius: 50px;
   width: var(--width);
   height: var(--height);
   overflow: auto;
-  text-align: justify;
+  text-align: center;
   padding: 20px;
 }
+
