--- a/stylesheets/slideshow.css
+++ b/stylesheets/slideshow.css
@@ -1,6 +1,6 @@
 .marquee-wrapper{
     text-align:center;
-    border: 3px solid black;
+    /* border: 3px solid black; */
     margin: 0;
     padding: 0;
 }
