--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -5,6 +5,7 @@ html{
 body {
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 0;
 }
 
 h1 {
@@ -39,16 +40,17 @@ header {
 
 footer {
     text-align: center;
+    background-color: rgba(146, 151, 151, 0.7);
 }
 
 .custom-width {
     --width: 50%;
-    width: var(--width);
+    width: var(--width) !important; /* same as style.css > .useful-link  comment */
 }
 
 .custom-height {
     --height: 50%;
-    height: var(--height);
+    height: var(--height) !important; /* same as style.css > .useful-link  comment */
 }
 
 .flex-space-around {
@@ -92,4 +94,11 @@ footer a {
 
 .align-items-center {
     align-items: center;
+}
+
+.anchor {
+    display: block;
+    position: relative;
+    top: -50px;
+    visibility: hidden;
 }
